security violation fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CloudBridge
 
 
 aws.accessKey=AKIAR4EU4PZTTSDNJ4XO
-aws.secretKey=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
+aws.secretKey=*********
 aws.region=us-east-1
 aws.s3.bucket=amiity-bucket
 
